# coralizer

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: cd.yml
npm/: package.json.tmpl  publish.js
npm/app/: index.js  package.json
src/: agent_config.rs  edit.rs  main.rs  mcp_client.rs  mcp_server.rs
src/frameworks/: mod.rs
src/frameworks/coral_rs/: mod.rs
src/frameworks/langchain/: mod.rs  nodejs.Dockerfile
