[package]
name = "coralizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
custom_derive = "0.1.7"
directories-next = "2.0.0"
enum_derive = "0.1.7"
ignore = "0.4.24"
inquire = "0.9.1"
itertools = "0.14.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
toml_edit = "0.23.7"
walkdir = "2.5.0"
zip = "6.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
mcp-runner = "0.3.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
rig-core = "0.23.0"
colored = "3.0.0"
indicatif = { version = "0.18.2", features = ["futures", "tokio"] }
console = "0.16.1"
futures-util = "0.3.31"
